# agentgauge

./: .gitignore  .pre-commit-config.yaml  AUTONOMY.md  BLOCKER.md  CLAUDE.md  LICENSE  PREDICTIVE_VALIDITY_HANDOFF.md  README.md  ROADMAP.md  STATUS.md  TASKS.md  agentgauge_pivot_onepager.md  agentready-spec.md  p2a_spec.md  paper_framing_options.md  pyproject.toml  spec.md  spec_ty2.md
.claude/: operator-prompt.md
.github/: pull_request_template.md
agentgauge/: __main__.py  _json.py  ab_harness.py  audit.py  cli.py  client.py  constraints.py  exp1_classifier.py  exp1_doc_density.py  exp1_mirror.py  exp1_tool_def_extractor.py  fixer.py  frontier.py  frozen_protocol.py  harness.py  linter.py  localizer.py  providers.py  q2a_harness.py  report.py  runner.py  scorer.py  tasks.py
examples/: aws_s3_server.py  aws_s3_server_fixed.py  call_constraints_guessable_server.py  call_constraints_guessable_server_oracle.py  call_constraints_server.py  call_constraints_server_fixed.py  call_constraints_server_oracle.py  call_constraints_v2_server.py  call_constraints_v2_server_fixed.py  call_constraints_v2_server_oracle.py  confusable_server.py  confusable_server_fixed.py  confusable_server_oracle.py  docker_containers_server.py  docker_containers_server_fixed.py  echo_server.py  echo_server_fixed.py  echo_server_fixed_dqonly.py  exp1_AminForou_mcp_gsc_mirror.py  exp1_AminForou_mcp_gsc_mirror_oracle.py  exp1_LycheeMem_LycheeMem_mirror.py  exp1_blazickjp_arxiv_mcp_server_mirror.py  exp1_datalayer_jupyter_mcp_server_mirror.py  exp1_datalayer_jupyter_mcp_server_mirror_oracle.py  exp1_dataojitori_nocturne_memory_mirror_fixed.py  exp1_lucasastorian_llmwiki_mirror.py  exp1_mrexodia_ida_pro_mcp_mirror.py  exp1_stefanoamorelli_sec_edgar_mcp_mirror.py  exp1_stickerdaniel_linkedin_mcp_server_mirror.py  exp1_taylorwilsdon_google_workspace_mcp_mirror.py  exp1_taylorwilsdon_google_workspace_mcp_mirror_oracle.py  gcal_server.py  gcal_server_fixed.py  github_issues_server.py  github_issues_server_fixed.py  grounded_server.py  grounded_server_fixed.py  grounded_server_oracle.py  jira_issues_server.py  jira_issues_server_fixed.py  (+38 more)
reports/: predictive_validity_study.md  v2_1_cross_model_validation.md  v2_1_estimator_rebuild.md  v2_1_linter_recall_fix.md  v2_1_severity_gate.md  v2_2_causal_chain.md  v2_2_few_clusters_correction.md  v2_2_optimal_allocation.md  v2_2_task_a_reallocation.md  v2_2_task_b_causal_chain_multimodel.md  v2_2_task_c_gcp_teardown.md  v2_3_task1_advisory_audit.md  v2_3_task2_retiering.md  v2_5_task1_shipped_fix.md  (+11 more)
(+263 files in other folders)
