[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentgauge"
version = "0.3.0"
description = "Deterministic defect linter for MCP tool descriptions (BLOCKING/ADVISORY severity gate) + a statistical regression harness (in active development)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp>=1.3.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "rich>=13.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
]

[project.scripts]
agentgauge = "agentgauge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agentgauge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agentgauge --cov-report=term-missing"

[tool.coverage.report]
fail_under = 60
omit = ["tests/*", "examples/*", "scripts/*"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
